[gd_scene load_steps=17 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Objects/Quit.png" type="Texture" id=2]
[ext_resource path="res://Objects/Menu.png" type="Texture" id=3]
[ext_resource path="res://Objects/New_Game.png" type="Texture" id=4]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0010_1.png" type="Texture" id=5]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0011_0.png" type="Texture" id=6]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0001_8.png" type="Texture" id=7]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0008_3.png" type="Texture" id=8]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0000_9.png" type="Texture" id=9]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0004_Lights.png" type="Texture" id=10]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0002_7.png" type="Texture" id=11]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0005_5.png" type="Texture" id=12]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0006_4.png" type="Texture" id=13]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0003_6.png" type="Texture" id=14]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0009_2.png" type="Texture" id=15]
[ext_resource path="res://Objects/Free Pixel Art Forest/PNG/Background layers/Layer_0007_Lights.png" type="Texture" id=16]

[node name="Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2.714, 1.679 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.111 )
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.111 )
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 15 )

[node name="TextureRect4" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 8 )

[node name="TextureRect5" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 16 )

[node name="TextureRect6" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 13 )

[node name="TextureRect7" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 12 )

[node name="TextureRect8" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 10 )

[node name="TextureRect9" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 14 )

[node name="TextureRect10" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 11 )

[node name="TextureRect11" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 7 )

[node name="TextureRect12" type="TextureRect" parent="."]
margin_right = 928.0
margin_bottom = 793.0
rect_scale = Vector2( 0.098, 0.11 )
texture = ExtResource( 9 )

[node name="YSort" type="YSort" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="YSort"]
margin_right = 40.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="YSort/MarginContainer"]
margin_right = 40.0
margin_bottom = 68.0

[node name="Play" type="Button" parent="YSort/MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0

[node name="Play_Texture" type="TextureButton" parent="YSort/MarginContainer/VBoxContainer/Play"]
margin_right = 189.0
margin_bottom = 58.0
rect_scale = Vector2( 0.212, 0.342 )
texture_normal = ExtResource( 4 )

[node name="Options" type="Button" parent="YSort/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="Options_Texture" type="TextureButton" parent="YSort/MarginContainer/VBoxContainer/Options"]
margin_right = 130.0
margin_bottom = 58.0
rect_scale = Vector2( 0.306, 0.338 )
texture_normal = ExtResource( 3 )

[node name="Quit" type="Button" parent="YSort/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0
text = "Quit"

[node name="Quit_Texture" type="TextureButton" parent="YSort/MarginContainer/VBoxContainer/Quit"]
margin_bottom = 59.0
rect_scale = Vector2( 0.305, 0.334 )
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="YSort/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="YSort/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="YSort/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
